--- a/projects.html
+++ b/projects.html
@@ -166,7 +166,7 @@
 						<h2>Email</h2>
 					</header>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="#">bretrosen@gmail.com</a></li>
+						<li class="icon solid fa-envelope"><a href="mailto:bretrosen@gmail.com">bretrosen@gmail.com</a></li>
 						<!-- <li class="icon solid fa-phone">(000) 000-0000</li>
 						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 							Nashville, TN 00000-0000</li> -->
@@ -175,8 +175,7 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a
-							href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5
+					<p class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5
 							UP</a>.</p>
 				</footer>
 
