--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/devicons.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 
 <body class="is-preload">
@@ -25,16 +27,18 @@
 				<!-- Header -->
 				<header id="header">
 					<!-- <a href="index.html" class="logo"> -->
-						<ul class="icons">
-							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<ul class="icons">
+						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 
-							<li><a href="https://www.linkedin.com/in/bretrosen/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/bretrosen" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+						<li><a href="https://www.linkedin.com/in/bretrosen/" class="icon brands fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/bretrosen" class="icon brands fa-github"><span
+									class="label">GitHub</span></a></li>
+					</ul>
 				</header>
 
 				<!-- Banner -->
@@ -70,25 +74,74 @@
 				</section>
 
 				<!-- Section -->
-				<!-- <section>
+				<section>
 					<header class="major">
-						<h2>Erat lacinia</h2>
+						<h2>Skills</h2>
 					</header>
 					<div class="features">
-						<article>
-							<span class="icon fa-gem"></span>
+
+						<div class="skills-box">
+							<i class="devicon-javascript-plain colored devicon"></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-github-original-wordmark colored devicon"></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-react-original-wordmark colored devicon"></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-python-plain-wordmark colored devicon"></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-postgresql-plain-wordmark colored devicon"></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-vscode-plain-wordmark colored devicon"></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-redux-original colored devicon"></i>
+						</div>
+
+
+
+
+						<div class="skills-box">
+								<i class='devicon-flask-original-wordmark colored devicon'></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-sqlite-plain-wordmark colored devicon"></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-sequelize-plain-wordmark colored devicon"></i>
+						</div>
+
+						<div class="skills-box">
+							<i class="devicon-sqlalchemy-original-wordmark colored devicon"></i>
+						</div>
+
+
+
+
+
+
+						<!-- <article>
+							<span class="devicon-flask-original devicon"></span>
 							<div class="content">
-								<h3>Portitor ullamcorper</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+								<h3>Flask</h3>
 							</div>
 						</article>
 						<article>
-							<span class="icon solid fa-paper-plane"></span>
+							<span class="devicon-github-original devicon"></span>
 							<div class="content">
-								<h3>Sapien veroeros</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+								<h3>GitHub</h3>
 							</div>
 						</article>
 						<article>
@@ -106,9 +159,9 @@
 								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
 									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 							</div>
-						</article>
+						</article> -->
 					</div>
-				</section> -->
+				</section>
 
 				<!-- Section -->
 				<!-- <section>
@@ -252,7 +305,8 @@
 						<h2>Email</h2>
 					</header>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="mailto:bretrosen@gmail.com">bretrosen@gmail.com</a></li>
+						<li class="icon solid fa-envelope"><a href="mailto:bretrosen@gmail.com">bretrosen@gmail.com</a>
+						</li>
 						<!-- <li class="icon solid fa-phone">(000) 000-0000</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li> -->
@@ -261,7 +315,8 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5
+					<p class="copyright">&copy; Untitled. All rights reserved. Design: <a
+							href="https://html5up.net">HTML5
 							UP</a>.</p>
 				</footer>
 
