removed first solo project and updated resume

--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
 
 					<hr class="major" />
 
-					<h2>BookfairBnb</h2>
+					<!-- <h2>BookfairBnb</h2>
 					<ul>
 						<li>Full Stack Solo Project</li>
 						<li>React | Express</li>
@@ -83,7 +83,7 @@
 						<li>Added AWS S3 to allow users to upload images, decreasing page load times and server load [TODO]. </li>
 						<li><a href='https://authenticate-me-zbb6.onrender.com'>Live Link</a></li>
 						<li><a href='https://github.com/bretrosen/API-project'>GitHub Repo</a></li>
-					</ul>
+					</ul> -->
 
 				</section>
 
