added a little about me

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 							with hope. “Tomorrow” may be learning a new programming language, and the “next day” may be
 							learning neural networks, and… who knows? I look forward to learning what the future of
 							software development holds for me.
+							<br /><br />
+							I'm looking for a software engineering position with a preference for back-end/data-oriented roles.
 						</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button big">Learn More</a></li>
