--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,10 @@
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 
-						<li><a href="https://www.linkedin.com/in/bretrosen/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/bretrosen" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/bretrosen/" class="icon brands fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/bretrosen" class="icon brands fa-github"><span
+									class="label">GitHub</span></a></li>
 					</ul>
 				</header>
 
@@ -53,8 +55,13 @@
 						<li>Full Stack Solo Project</li>
 						<li>React | Flask</li>
 						<li>A clone of the website Rate My Professors.</li>
-						<li>Designed a database to allow users to interact with an intricately interconnected set of tables.</li>
-						<li>Utilized the random module in Python to generate a robust database.</li>
+						<li>Designed a SQL-compatible database in SQLAlchemy that allows users to review professors and
+							courses.</li>
+						<li>Added a debate feature that allows users to simulate a DnD style debate/combat using
+							aggregate review data.
+						</li>
+						<li>Utilized the random module in Python to generate a robust database of professors/courses and
+							reviews.</li>
 						<li><a href='https://debate-my-professors.onrender.com'>Live Link</a></li>
 						<li><a href='https://github.com/bretrosen/capstone'>GitHub Repo</a></li>
 					</ul>
@@ -66,8 +73,12 @@
 						<li>Full Stack Group Project</li>
 						<li>React | Flask</li>
 						<li>A clone of the website Robinhood.</li>
-						<li>Implemented a daily price chart with the Chart.js package to render a line graph updating in real-time.</li>
-						<li>Incorporated the  Finnhub API to display updated information about financial assets.</li>
+						<li>Employed version control via GitHub to collaborate with two other team members, using a
+							modular approach to
+							separate project features while maintaining best practices for agile workflow.</li>
+						<li>Implemented a daily price chart with the Chart.js package to render a line graph updating in
+							real-time.</li>
+						<li>Incorporated the Finnhub API to display updated information about financial assets.</li>
 						<li><a href='https://foxtrot.onrender.com'>Live Link</a></li>
 						<li><a href='https://github.com/bretrosen/robinhood_clone'>GitHub Repo</a></li>
 					</ul>
@@ -166,7 +177,8 @@
 						<h2>Email</h2>
 					</header>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="mailto:bretrosen@gmail.com">bretrosen@gmail.com</a></li>
+						<li class="icon solid fa-envelope"><a href="mailto:bretrosen@gmail.com">bretrosen@gmail.com</a>
+						</li>
 						<!-- <li class="icon solid fa-phone">(000) 000-0000</li>
 						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 							Nashville, TN 00000-0000</li> -->
@@ -175,7 +187,8 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5
+					<p class="copyright">&copy; Untitled. All rights reserved. Design: <a
+							href="https://html5up.net">HTML5
 							UP</a>.</p>
 				</footer>
 
