--- a/projects.html
+++ b/projects.html
@@ -76,8 +76,7 @@
 						<li>Employed version control via GitHub to collaborate with two other team members, using a
 							modular approach to
 							separate project features while maintaining best practices for agile workflow.</li>
-						<li>Implemented a daily price chart with the Chart.js package to render a line graph updating in
-							real-time.</li>
+						<li>Implemented price charts with the Chart.js package to render dynamic graphs of stock prices.</li>
 						<li>Incorporated the Finnhub API to display updated information about financial assets.</li>
 						<li><a href='https://foxtrot.onrender.com'>Live Link</a></li>
 						<li><a href='https://github.com/bretrosen/robinhood_clone'>GitHub Repo</a></li>
