added Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 <html>
 
 <head>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-59WFNBPD98"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-59WFNBPD98');
+	</script>
+
 	<title>Bret Rosen</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -64,7 +75,8 @@
 							learning neural networks, and… who knows? I look forward to learning what the future of
 							software development holds for me.
 							<br /><br />
-							I'm looking for a software engineering position with a preference for back-end/data-oriented roles.
+							I'm looking for a software engineering position with a preference for back-end/data-oriented
+							roles.
 						</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button big">Learn More</a></li>
@@ -114,7 +126,7 @@
 
 
 						<div class="skills-box">
-								<i class='devicon-flask-original-wordmark colored devicon'></i>
+							<i class='devicon-flask-original-wordmark colored devicon'></i>
 						</div>
 
 						<div class="skills-box">
