added taxi to projects, resume mod

--- a/projects.html
+++ b/projects.html
@@ -54,14 +54,14 @@
 					<ul>
 						<li>Full Stack Solo Project</li>
 						<li>React | Flask</li>
-						<li>A clone of the website Rate My Professors.</li>
-						<li>Designed a SQL-compatible database in SQLAlchemy that allows users to review professors and
-							courses.</li>
-						<li>Added a debate feature that allows users to simulate a DnD style debate/combat using
-							aggregate review data.
+						<li>A clone of the website Rate My Professors populated by historical academics.</li>
+						<li>Designed a PostgreSQL database in production utilizing SQLAlchemy in development and leveraging the
+						random module in Python to generate thousands of professors/courses and reviews.</li>
+						<li>Used RESTful API conventions with Flask on the backend and React on the frontend to create efficient
+						and standardized routes, ensuring seamless data flow through the application.</li>
+						<li>Added a debate feature using aggregate review data, allowing users to simulate a DnD style debate.
 						</li>
-						<li>Utilized the random module in Python to generate a robust database of professors/courses and
-							reviews.</li>
+						<li>Created a search function accessing the Redux state to return results based on dynamic user input.</li>
 						<li><a href='https://debate-my-professors.onrender.com'>Live Link</a></li>
 						<li><a href='https://github.com/bretrosen/capstone'>GitHub Repo</a></li>
 					</ul>
@@ -73,13 +73,23 @@
 						<li>Full Stack Group Project</li>
 						<li>React | Flask</li>
 						<li>A clone of the website Robinhood.</li>
-						<li>Employed version control via GitHub to collaborate with two other team members, using a
-							modular approach to
-							separate project features while maintaining best practices for agile workflow.</li>
+						<li>Employed version control via GitHub to collaborate with two other team members, using a modular approach to separate project features while maintaining best practices for Agile workflow</li>
 						<li>Implemented price charts with the Chart.js package to render dynamic graphs of stock prices.</li>
 						<li>Incorporated the Finnhub API to display updated information about financial assets.</li>
 						<li><a href='https://foxtrot.onrender.com'>Live Link</a></li>
 						<li><a href='https://github.com/bretrosen/robinhood_clone'>GitHub Repo</a></li>
+					</ul>
+
+					<h2>NYC Yellow Taxi Analysis</h2>
+					<ul>
+						<li>Data Analysis Project</li>
+						<li>Pandas | DuckDB | Power BI</li>
+						<li>Exploration and analysis of the profitability of taxi operation in NYC.</li>
+						<li>Extracted data for 38 million taxi rides from 2023 to a Parquet file using DuckDB.</li>
+						<li>Transformed data through exploratory data analysis, cleaning, and imputation with Pandas.
+						</li>
+						<li>Loaded dataset into a Power BI dashboard to provide insights into taxi analytics.</li>
+						<li>Created a report detailing recommendations for using KPIs to increase profitability of taxi operation.</li>
 					</ul>
 
 					<hr class="major" />
