added taxi report

--- a/projects.html
+++ b/projects.html
@@ -90,6 +90,7 @@
 						</li>
 						<li>Loaded dataset into a Power BI dashboard to provide insights into taxi analytics.</li>
 						<li>Created a report detailing recommendations for using KPIs to increase profitability of taxi operation.</li>
+						<li><a href="nyc_yellow_taxi_analysis.pdf">Live Link</a></li>
 					</ul>
 
 					<hr class="major" />
