lil taxi bullet revision

--- a/projects.html
+++ b/projects.html
@@ -89,8 +89,9 @@
 						<li>Transformed data through exploratory data analysis, cleaning, and imputation with Pandas.
 						</li>
 						<li>Loaded dataset into a Power BI dashboard to provide insights into taxi analytics.</li>
-						<li>Created a report detailing recommendations for using KPIs to increase profitability of taxi operation.</li>
+						<li>Created a report detailing recommendations for most profitable pickup neighborhoods and times using a KPI based on fare and trip duration.</li>
 						<li><a href="nyc_yellow_taxi_analysis.pdf">Live Link</a></li>
+						<li><a href='https://github.com/bretrosen/nyc-yellow-taxi-2023'>GitHub Repo</a></li>
 					</ul>
 
 					<hr class="major" />
